@@ -49,6 +49,7 @@ Jeffrey Spencer <jeffspencerd@gmail.com>
 Jesse Legg <jesse@jesselegg.com>
 Joao Tavora http://autopair.googlecode.com
 John Wiegley <johnw@newartisans.com>
+Jonathan Waltman <jonathan.waltman@gmail.com>
 Juan A Rodriquez <juant.rodri@yahoo.es>
 Juanma Barranquero  <lekktu@gmail.com>
 Kao Félix <kcfelix@gmail.com>
@@ -93,5 +94,6 @@ Tom Roche <Tom_Roche@pobox.com>
 Tom Willemsen <tom@ryuslash.org>
 Urs Fleisch <urs.fleisch@gmail.com>
 Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+Wilfred Hughes http://www.wilfred.me.uk
 William Xu <william.xwl@gmail.com>
 Yuri Goncharov
