@@ -4395,7 +4395,7 @@ C-q TAB inserts a literal TAB-character."
 	  (if (< 23 (string-to-number (car (split-string emacs-version "\\."))))
 	      (delete-trailing-whitespace (line-beginning-position) pos)
 	    (save-restriction
-	      (narrow-to-region (point) pos)
+	      (narrow-to-region (line-beginning-position) pos)
 	      (delete-trailing-whitespace)))
 	(skip-chars-backward " \t")
 	(if (< 23 (string-to-number (car (split-string emacs-version "\\."))))
@@ -4413,7 +4413,8 @@ When indent is set back manually, this is honoured in following lines. "
 	 ;; lp:1280982, deliberatly dedented by user
 	 (this-dedent
 	  (when (and (or (eq 10 (char-after))(eobp))(looking-back "^[ \t]*")
-		     (or (string-match "backspace" lkmd)(string-match "indent" lkmd) (string-match "newline" lkmd)))
+		     ;; (or (string-match "backspace" lkmd)(string-match "indent" lkmd) (string-match "newline" lkmd))
+                     )
 	    (current-column)))
 	 erg pos)
     (newline)
